apps/admin/admin-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: duah-admin-dep
  namespace: duah-apps
  labels:
    app: duah-admin
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: duah-admin
  template:
    metadata:
      labels:
        app: duah-admin
    spec:
      imagePullSecrets:
      - name: duah-ghcr-pull-secret
      containers:
      - name: duah-admin
        image: ghcr.io/denuafhaengige/duah-admin:master-27358c2-1656348317 # {"$imagepolicy": "duah-apps:duah-admin-image-policy"}
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        - name: health
          containerPort: 9090
          protocol: TCP
        resources:
          limits:
            cpu: 32m
            memory: 64Mi
          requests:
            cpu: 16m
            memory: 32Mi
        livenessProbe:
          httpGet:
            path: /healthz/live
            port: health
          failureThreshold: 3
          periodSeconds: 10
          initialDelaySeconds: 30
        readinessProbe:
          httpGet:
            path: /healthz/ready
            port: health
          failureThreshold: 3
          periodSeconds: 10
          initialDelaySeconds: 30
