apps/admin/admin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: duah-admin-svc
  namespace: duah-apps
  labels:
    app: duah-admin
spec:
  type: ClusterIP
  selector:
    app: duah-admin
  ports:
  - name: http
    port: 80
    protocol: TCP
